fix(page): adjust layout and spacing in main page and product card components

--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -20,7 +20,7 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
   row-gap: 20px;
   column-gap: 30px;
   /* Adjust the gap between columns as needed */
